# scrkbd

./: .gitignore  CMakeLists.txt  scrkbd.ini
cmake/: version.cmake
patches/: imgui-000-config-32bit-indices.patch
src/: main.cpp
